--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <!--HALO FRENDS-->
+<!--HALO FRENDS-->
+<!--HALO FRENDS-->
+<!--HALO FRENDS-->
+<!--HALO FRENDS-->
+<!--HALO FRENDS-->
+<!--HALO FRENDS-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
