--- a/views/login.html
+++ b/views/login.html
@@ -30,7 +30,6 @@
       <div id="signuppage">
         <div class="content">
           <p class="heading">Sign up</p>
-
           <div class="email">
             <div class="text">
               <p>Email</p>
@@ -40,7 +39,6 @@
             </div>
             <input type="textbox" name="email" id="email" />
           </div>
-
           <div class="password">
             <div class="text">
               <p>Password</p>
@@ -93,9 +91,8 @@
             <input type="text" name="password" id="password" />
           </div>
 
-          <a href="userDashboard.html"
-            ><input type="submit" name="signup" id="login" value="Log in"
-          /></a>
+          <a href="userDashboard.html">
+            <input type="submit" name="signup" id="login" value="Log in"/></a>
           <p class="forgotpassword">Forgot password?</p>
         </div>
       </div>
