--- a/views/main.html
+++ b/views/main.html
@@ -16,6 +16,7 @@
   <body>
     <!-- START: Navbar -->
     <!-- hehe -->
+    <!-- HAHA -->
     <div id="navbar">
       <div class="nav-container">
         <div class="logo">
