--- a/views/main.html
+++ b/views/main.html
@@ -17,6 +17,8 @@
     <!-- START: Navbar -->
     <!-- hehe -->
     <!-- diwow -->
+    <!-- haha -->
+  
     <div id="navbar">
       <div class="nav-container">
         <div class="logo">
