--- a/views/signup.html
+++ b/views/signup.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
     <script
       src="https://kit.fontawesome.com/434f997720.js"
       crossorigin="anonymous"
