--- a/views/main.html
+++ b/views/main.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/main.css" />
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://kit.fontawesome.com/434f997720.js"
       crossorigin="anonymous"
     ></script>
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <title>DIWAR</title>
   </head>
   <body>
@@ -18,7 +19,7 @@
     <!-- hehe -->
     <!-- diwow -->
     <!-- haha -->
-  
+
     <div id="navbar">
       <div class="nav-container">
         <div class="logo">
@@ -171,14 +172,15 @@
             <p>reach us</p>
             <p>Lorem ipsum, dolor sit amet conse adipisicing elit.</p>
             <form action="">
-              <input type="text" name="name" placeholder="name" />
-              <input type="text" name="email " placeholder="email" />
+              <input type="text" name="name" placeholder="name" id="name" />
+              <input type="text" name="email " placeholder="email" id="email" />
               <textarea
                 name="message"
                 id=""
                 cols="40"
                 rows="10"
                 placeholder="message"
+                id="message"
               ></textarea>
               <input type="button" value="send message" />
             </form>
@@ -219,6 +221,6 @@
       </div>
     </div>
     <!-- END: Contact us -->
-    <script src="js/landingpage.js"></script>
+    <script src="../js/landingpage.js"></script>
   </body>
 </html>
