--- a/views/signup.html
+++ b/views/signup.html
@@ -58,7 +58,24 @@
             </div>
             <input type="text" name="password" id="signuppassword" />
           </div>
-
+          <div class="email">
+            <div class="text">
+              <p>Name</p>
+            </div>
+            <input type="textbox" name="email" id="email" />
+          </div>
+          <div class="email">
+            <div class="text">
+              <p>Gender</p>
+            </div>
+            <input type="textbox" name="email" id="email" />
+          </div>
+          <div class="email">
+            <div class="text">
+              <p>Department</p>
+            </div>
+            <input type="textbox" name="email" id="email" />
+          </div>
           <div class="validators">
             <p><span></span> One lowercase character</p>
             <p><span></span> One Uppercase character</p>
